--- a/singularity/soft-matter/conf/python/requirements.txt
+++ b/singularity/soft-matter/conf/python/requirements.txt
@@ -1,15 +1,24 @@
+aiohttp
 alabaster
+alembic
 ansible
 apipkg
+ansible-base
 appdirs
 argcomplete
 args
+argon2-cffi
 arrow
 asn1crypto
 astor
+ase
+asgiref
 astroid
 atomate
+async-generator
+async-timeout
 atomicwrites
+atomman
 attrs
 Automat
 autopep8
@@ -17,8 +26,13 @@ Babel
 backcall
 bcrypt
 biopython
+bibtexparser
+black
 bleach
 cairocffi
+boto3
+botocore
+cdcs
 certifi
 cffi
 cftime
@@ -38,40 +52,57 @@ cycler
 Cython
 dataclasses
 debtcollector
+DataModelDict
 decorator
 defusedxml
 diff-match-patch
-dill
+dill==0.3.1.1
 docutils
 dogpile.cache
-dtool
+dtool==3.25.0
 dtool-annotation
 dtool-cli
 dtool-config
 dtool-create==0.23.0
+dtool-ecs
 dtool-http
 dtool-info
+dtool-irods
+dtool-lookup-api
+dtool-lookup-server
+dtool-lookup-server-dependency-graph-plugin
+dtool-lookup-server-direct-mongo-plugin
+dtool-lookup-server-plugin-scaffolding
 dtool-overlay
+dtool-s3
 dtool-smb
 dtool-symlink
 dtool-tag
+dtoolcore==3.17.0
 entrypoints
 et-xmlfile
 execnet
 fabric
-#fenics
-#fenics-dijitso
-#fenics-dolfin
-#fenics-ffc
-#fenics-fiat
-#fenics-ufl
+fenics-dijitso
+fenics-ffc
+fenics-fiat
+fenics-ufl
 flake8
 Flask
+Flask-Cors
+Flask-JWT-Extended
+Flask-Migrate
 flask-paginate
 GridDataFormats
 GromacsWrapper
 gsd
+Flask-PyMongo
+Flask-SQLAlchemy
+future
+fwrlm
+gbulb
 gunicorn
+habanero
 helpdev
 html5lib
 hunter
@@ -84,6 +115,8 @@ imageio-ffmpeg
 imagesize
 importlib-metadata
 incremental
+imteksimfw
+iniconfig
 intervaltree
 invoke
 ipykernel
@@ -113,13 +146,17 @@ jupyter-core
 jupyter-highlight-selected-word
 jupyter-latex-envs
 jupyter-nbextensions-configurator
+jupyterlab-pygments
+jupytext
 keyring
 keystoneauth1
 kiwisolver
 lazy-object-proxy==1.4.3
 lockfile
 lxml
+Mako
 manhole
+markdown-it-py
 MarkupSafe
 matplotlib
 mccabe
@@ -138,8 +175,10 @@ mpmath
 msgpack
 #mshr
 munch
+multidict
 mypy
 mypy-extensions
+nbclient
 nbconvert
 nbformat
 netaddr
@@ -147,8 +186,10 @@ netCDF4
 netifaces
 networkx
 nglview
+nest-asyncio
 notebook
 numkit
+numericalunits
 numpy
 numpydoc
 openpyxl
@@ -167,31 +208,36 @@ panedr
 paramiko
 ParmEd
 parse
-parso
+parso==0.7.0
+pathspec
 pathtools
 pbr
 pep8
 pexpect
 pickleshare
 pid
+pigar
 Pillow
 Pint
 pipdeptree
-#pkg-resources
 pkgconfig
+pkginfo
 pluggy
 Pmw
 prettytable
 proglog
+pockets
+podman-compose
+potentials
 prometheus-client
 prompt-toolkit
 psutil
 ptyprocess
 PuLP
 py
-py2exe
 pyasn1
 pybind11
+pycairo
 pycodestyle
 pycparser
 pydash
@@ -200,9 +246,13 @@ pydocstyle
 pydot
 pyflakes
 Pygments
+PyGObject
+PyJWT
 pylint
 pymatgen
 pymatgen-diffusion
+pyls-black
+pyls-spyder
 pymongo
 PyNaCl
 pyOpenSSL
@@ -220,9 +270,11 @@ pytest-datadir
 pytest-forked
 pytest-xdist
 python-cinderclient
+pytest-runner
 python-daemon
 python-dateutil
 python-glanceclient
+python-editor
 python-igraph
 python-jsonrpc-server
 python-keystoneclient
@@ -237,17 +289,24 @@ QDarkStyle
 QtAwesome
 qtconsole
 QtPy
+readme-renderer
+regex
 requests
 requestsexceptions
+requests-toolbelt
 rfc3986
 rope
 rply
+rst2html
 ruamel.yaml
 ruamel.yaml.clib
+s3transfer
 scipy
 SecretStorage
 Send2Trash
 sentry-sdk
+setuptools-scm
+shyaml
 six
 snowballstemmer
 sortedcontainers
@@ -257,26 +316,34 @@ sphinxcontrib-applehelp
 sphinxcontrib-devhelp
 sphinxcontrib-htmlhelp
 sphinxcontrib-jsmath
+sphinxcontrib-napoleon
 sphinxcontrib-qthelp
 sphinxcontrib-serializinghtml
 spyder
 spyder-kernels
 stevedore
+SQLAlchemy
 sympy
 tabulate
 terminado
 testpath
 texttable
+three-merge
+toml
+toolz
 tornado
 tqdm
 traitlets
 Twisted
+twine
 typed-ast
 typing-extensions
 ujson==1.35
+Unidecode
 urllib3
 versioneer
 warlock
+varlink
 watchdog
 wcwidth
 webencodings
@@ -285,6 +352,8 @@ widgetsnbextension
 wrapt
 wurlitzer
 xlrd
+xmltodict
 yapf
 zipp
 zope.interface
+yarl
