Updates to LAMMPS OneAPI container

--- a/container_recipes/CODES/LAMMPS-OneAPI/Dockerfile
+++ b/container_recipes/CODES/LAMMPS-OneAPI/Dockerfile
@@ -1,5 +1,4 @@
-FROM ubuntu:20.04 
-# AS builder
+FROM ubuntu:20.04 AS builder
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=1
@@ -22,7 +21,11 @@ RUN file=$(basename "$url") && \
 ARG apt_repo=https://apt.repos.intel.com/oneapi
 RUN echo "deb $apt_repo all main" > /etc/apt/sources.list.d/oneAPI.list
 
-ENV ONEAPI_VERSION="2021.4.0"
+# Attention: There is a second definition in the second stage
+# This is the OneAPI version on NEMO. Load it with:
+#   source /opt/bwhpc/intel/oneapi/setvars.sh
+# (It is not available via module)
+ENV ONEAPI_VERSION="2021.3.0"
 
 RUN apt-get update -y \
 	&& apt-get install -y \
@@ -54,6 +57,7 @@ ENV CPATH=/opt/intel/oneapi/mpi/${ONEAPI_VERSION}/include:/opt/intel/oneapi/mkl/
 ENV LD_LIBRARY_PATH=/opt/intel/oneapi/mpi/${ONEAPI_VERSION}/libfabric/lib:/opt/intel/oneapi/mpi/${ONEAPI_VERSION}/lib/release:/opt/intel/oneapi/mpi/${ONEAPI_VERSION}/lib:/opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64:/opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/lib:/opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/lib/x64:/opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/compiler/lib/intel64_lin
 ENV LIBRARY_PATH=/opt/intel/oneapi/mpi/${ONEAPI_VERSION}//libfabric/lib:/opt/intel/oneapi/mpi/${ONEAPI_VERSION}/lib/release:/opt/intel/oneapi/mpi/${ONEAPI_VERSION}/lib:/opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64:/opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/compiler/lib/intel64_lin:/opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/lib
 ENV MKLROOT=/opt/intel/oneapi/mkl/${ONEAPI_VERSION}
+ENV I_MPI_ROOT=/opt/intel/oneapi/mpi/${ONEAPI_VERSION}
 
 ENV NUMPY_VERSION="1.19.5"
 WORKDIR /tmp
@@ -67,8 +71,6 @@ WORKDIR /tmp
 RUN curl -L https://github.com/scipy/scipy/archive/refs/tags/v${SCIPY_VERSION}.tar.gz | tar xz
 WORKDIR /tmp/scipy-${SCIPY_VERSION}
 RUN python3 setup.py config --compiler=intelem --fcompiler=intelem build_clib --compiler=intelem --fcompiler=intelem build_ext --compiler=intelem --fcompiler=intelem install
-
-ENV I_MPI_ROOT=/opt/intel/oneapi/mpi/${ONEAPI_VERSION}
 
 #
 # Install parallel version of the NetCDF library from the sources.
@@ -140,34 +142,60 @@ RUN mkdir build \
 	-DPKG_UEF=ON \
 	-DPKG_ML-PACE=ON \
 	../cmake \
-	&& cmake --build .
+	&& cmake --build . \
+	&& make install
 
+#
+# Install simple MPI benchmark
+#
 
-# FROM ubuntu:18.04
+WORKDIR /tmp
+RUN git clone https://github.com/LLNL/mpiBench.git \
+	&& cd mpiBench \
+	&& make \
+	&& cp mpiBench /usr/local/bin
 
-# RUN apt-get update -y \
-# 	&& apt-get install -y \
-# 	python3 \
-# 	python3-pip \
-# 	strace \
-# 	less
+FROM ubuntu:20.04
 
-# # Environment variables for MKL
-# ENV LD_LIBRARY_PATH='/opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/compiler/lib/intel64_lin:/opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64'
+RUN apt-get update -y \
+	&& apt-get install -y \
+ 	python3 \
+ 	python3-pip \
+ 	strace \
+ 	less \
+ 	libcurl4 \
+ 	libjpeg62 \
+ 	libpng16-16
 
-# # Copy numpy, scipy, Atomistica and DFTB+
-# COPY --from=builder /usr/local/ /usr/local/
+ENV ONEAPI_VERSION="2021.3.0"
 
-# # Copy Fortran runtime - but only the libraries we actually need
-# COPY --from=builder /opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/compiler/lib/intel64_lin/*.so* /opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/compiler/lib/intel64_lin/
+# Environment variables for MKL
+ENV PATH=/opt/intel/oneapi/mpi/${ONEAPI_VERSION}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+ENV LD_LIBRARY_PATH=/opt/intel/oneapi/mpi/${ONEAPI_VERSION}/libfabric/lib:/opt/intel/oneapi/mpi/${ONEAPI_VERSION}/lib/release:/opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/compiler/lib/intel64_lin:/opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64:/usr/local/lib
 
-# # Copy MKL - but only the libaries we actually need
-# COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_rt.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
-# COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_core.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
-# COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_intel_thread.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
-# COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_intel_lp64.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
-# COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_def.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
-# COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_avx*.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
+# Copy everything we build ourselves
+COPY --from=builder /usr/local/ /usr/local/
+
+# Copy compiler runtime - but only the libraries we actually need
+COPY --from=builder /opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/compiler/lib/intel64_lin/*.so* /opt/intel/oneapi/compiler/${ONEAPI_VERSION}/linux/compiler/lib/intel64_lin/
+
+# Copy MPI - but only the libraries we actually need
+COPY --from=builder /opt/intel/oneapi/mpi/${ONEAPI_VERSION}/bin /opt/intel/oneapi/mpi/${ONEAPI_VERSION}/bin/
+COPY --from=builder /opt/intel/oneapi/mpi/${ONEAPI_VERSION}/lib /opt/intel/oneapi/mpi/${ONEAPI_VERSION}/lib/
+COPY --from=builder /opt/intel/oneapi/mpi/${ONEAPI_VERSION}/libfabric /opt/intel/oneapi/mpi/${ONEAPI_VERSION}/libfabric/
+COPY --from=builder /opt/intel/oneapi/mpi/${ONEAPI_VERSION}/etc /opt/intel/oneapi/mpi/${ONEAPI_VERSION}/etc/
+
+# Copy MKL
+COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_rt.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
+COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_core.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
+COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_intel_thread.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
+COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_intel_lp64.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
+COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_def.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
+COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmkl_avx*.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
 # COPY --from=builder /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/libmemkind.so* /opt/intel/oneapi/mkl/${ONEAPI_VERSION}/lib/intel64/
 
-# CMD ["python3"]
+# Just make sure there is no OpenMP madness goingon
+ENV OMP_NUM_THREADS=1
+ENV MKL_NUM_THREADS=1
+
+CMD ["/usr/local/bin/lmp"]
