--- a/docker/jupyter/requirements.txt
+++ b/docker/jupyter/requirements.txt
@@ -182,6 +182,8 @@ idna==3.3
     #   anyio
     #   requests
     #   yarl
+igraph==0.9.11
+    # via -r requirements.in
 importlib-resources==5.4.0
     # via jsonschema
 imteksimfw==0.5.1
@@ -488,6 +490,8 @@ terminado==0.13.3
     #   notebook
 testpath==0.6.0
     # via nbconvert
+texttable==1.6.4
+    # via igraph
 threadpoolctl==3.1.0
     # via mdanalysis
 toml==0.10.2
