--- a/docker/jupyterlab/jupyterlab-SurfaceTopography/requirements.txt
+++ b/docker/jupyterlab/jupyterlab-SurfaceTopography/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiohttp==3.8.3
     # via dtool-lookup-api
-aiosignal==1.2.0
+aiosignal==1.3.1
     # via aiohttp
 arrow==1.2.3
     # via jinja2-time
@@ -16,21 +16,23 @@ asgiref==3.5.2
     # via
     #   -r requirements.in
     #   dtool-lookup-api
-asttokens==2.0.8
+asttokens==2.1.0
     # via stack-data
 async-timeout==4.0.2
     # via aiohttp
 attrs==22.1.0
-    # via aiohttp
+    # via
+    #   aiohttp
+    #   pytest
 backcall==0.2.0
     # via ipython
 bcrypt==4.0.1
     # via paramiko
 biopython==1.79
     # via mdanalysis
-boto3==1.25.2
+boto3==1.26.5
     # via dtool-s3
-botocore==1.28.2
+botocore==1.29.5
     # via
     #   boto3
     #   s3transfer
@@ -59,9 +61,9 @@ click==8.1.3
     #   flask
 click-plugins==1.1.1
     # via dtool-cli
-contourpy==1.0.5
+contourpy==1.0.6
     # via matplotlib
-cryptography==38.0.1
+cryptography==38.0.3
     # via paramiko
 cycler==0.11.0
     # via
@@ -133,7 +135,9 @@ entrypoints==0.4
     # via jupyter-client
 et-xmlfile==1.1.0
     # via openpyxl
-executing==1.1.1
+exceptiongroup==1.0.1
+    # via pytest
+executing==1.2.0
     # via stack-data
 fasteners==0.18
     # via mdanalysis
@@ -147,7 +151,7 @@ flask-paginate==2022.1.8
     # via fireworks
 fonttools==4.38.0
     # via matplotlib
-frozenlist==1.3.1
+frozenlist==1.3.3
     # via
     #   aiohttp
     #   aiosignal
@@ -157,7 +161,7 @@ gromacs==0.0.0
     # via -r requirements.in
 gromacswrapper==0.8.2
     # via -r requirements.in
-gsd==2.6.0
+gsd==2.6.1
     # via mdanalysis
 gunicorn==20.1.0
     # via fireworks
@@ -167,11 +171,15 @@ idna==3.4
     #   yarl
 importlib-metadata==5.0.0
     # via flask
+imteksimcs @ git+https://github.com/IMTEK-Simulation/code-snippets.git
+    # via -r requirements.in
 imteksimfw==0.5.1
     # via -r requirements.in
-ipykernel==6.16.2
+iniconfig==1.1.1
+    # via pytest
+ipykernel==6.17.0
     # via ipywidgets
-ipython==8.5.0
+ipython==8.6.0
     # via
     #   -r requirements.in
     #   ipykernel
@@ -216,7 +224,7 @@ markupsafe==2.1.1
     # via
     #   jinja2
     #   werkzeug
-matplotlib==3.6.0
+matplotlib==3.6.2
     # via
     #   -r requirements.in
     #   ase
@@ -249,7 +257,7 @@ nest-asyncio==1.5.6
     # via
     #   ipykernel
     #   jupyter-client
-networkx==2.8.7
+networkx==2.8.8
     # via mdanalysis
 nglview==3.0.3
     # via -r requirements.in
@@ -264,6 +272,7 @@ numpy==1.23.4
     #   griddataformats
     #   gromacswrapper
     #   gsd
+    #   imteksimcs
     #   matplotlib
     #   mdanalysis
     #   miniball
@@ -286,14 +295,16 @@ packaging==21.3
     #   ipykernel
     #   matplotlib
     #   mdanalysis
+    #   pytest
 pandas==1.5.1
     # via
     #   -r requirements.in
+    #   imteksimcs
     #   panedr
     #   seaborn
 panedr==0.7.0
     # via -r requirements.in
-paramiko==2.11.0
+paramiko==2.12.0
     # via imteksimfw
 parmed==3.4.3
     # via -r requirements.in
@@ -311,11 +322,13 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pillow==9.2.0
+pillow==9.3.0
     # via matplotlib
-prompt-toolkit==3.0.31
+pluggy==1.0.0
+    # via pytest
+prompt-toolkit==3.0.32
     # via ipython
-psutil==5.9.3
+psutil==5.9.4
     # via ipykernel
 ptyprocess==0.7.0
     # via pexpect
@@ -343,6 +356,8 @@ pyside2==5.15.2.1
     # via
     #   -r requirements.in
     #   ovito
+pytest==7.2.0
+    # via -r requirements.in
 python-dateutil==2.8.2
     # via
     #   arrow
@@ -351,7 +366,7 @@ python-dateutil==2.8.2
     #   jupyter-client
     #   matplotlib
     #   pandas
-pytz==2022.5
+pytz==2022.6
     # via pandas
 pyyaml==6.0
     # via
@@ -379,6 +394,7 @@ scipy==1.9.3
     #   -r requirements.in
     #   ase
     #   griddataformats
+    #   imteksimcs
     #   mdanalysis
     #   numkit
     #   scikit-learn
@@ -395,7 +411,7 @@ six==1.16.0
     #   numkit
     #   paramiko
     #   python-dateutil
-stack-data==0.5.1
+stack-data==0.6.0
     # via ipython
 tabulate==0.9.0
     # via fireworks
@@ -407,6 +423,7 @@ tomli==2.0.1
     # via
     #   -r requirements.in
     #   pep517
+    #   pytest
 tornado==6.2
     # via
     #   ipykernel
