--- a/docker/jupyterlab/jupyterlab-SurfaceTopography/requirements.txt
+++ b/docker/jupyterlab/jupyterlab-SurfaceTopography/requirements.txt
@@ -61,6 +61,8 @@ click==8.1.3
     #   flask
 click-plugins==1.1.1
     # via dtool-cli
+contactmechanics==1.0.0
+    # via -r requirements.in
 contourpy==1.0.6
     # via matplotlib
 cryptography==38.0.3
@@ -73,6 +75,8 @@ debugpy==1.6.3
     # via ipykernel
 decorator==5.1.1
     # via ipython
+defusedxml==0.7.1
+    # via surfacetopography
 dill==0.3.6
     # via imteksimfw
 dnspython==2.2.1
@@ -165,10 +169,14 @@ gsd==2.6.1
     # via mdanalysis
 gunicorn==20.1.0
     # via fireworks
+h5py==3.7.0
+    # via surfacetopography
 idna==3.4
     # via
     #   requests
     #   yarl
+igor==0.3
+    # via surfacetopography
 importlib-metadata==5.0.0
     # via flask
 imteksimcs @ git+https://github.com/IMTEK-Simulation/code-snippets.git
@@ -231,6 +239,7 @@ matplotlib==3.6.2
     #   gromacswrapper
     #   mdanalysis
     #   seaborn
+    #   surfacetopography
 matplotlib-inline==0.1.6
     # via
     #   ipykernel
@@ -245,10 +254,16 @@ monty==2022.9.9
     # via
     #   fireworks
     #   imteksimfw
+mpi4py==3.1.4
+    # via mufft
 mrcfile==1.4.3
     # via griddataformats
 msgpack==1.0.4
     # via mmtf-python
+mufft==0.23.1
+    # via
+    #   contactmechanics
+    #   surfacetopography
 multidict==6.0.2
     # via
     #   aiohttp
@@ -263,28 +278,40 @@ nglview==3.0.3
     # via -r requirements.in
 numkit==1.2.2
     # via gromacswrapper
+numpi==0.3.1
+    # via
+    #   contactmechanics
+    #   surfacetopography
 numpy==1.23.4
     # via
     #   -r requirements.in
     #   ase
     #   biopython
+    #   contactmechanics
     #   contourpy
     #   griddataformats
     #   gromacswrapper
     #   gsd
+    #   h5py
     #   imteksimcs
     #   matplotlib
     #   mdanalysis
     #   miniball
     #   mrcfile
+    #   mufft
     #   nglview
     #   numkit
+    #   numpi
+    #   numpyencoder
     #   ovito
     #   pandas
     #   pyedr
     #   scikit-learn
     #   scipy
     #   seaborn
+    #   surfacetopography
+numpyencoder==0.3.0
+    # via surfacetopography
 openpyxl==3.0.10
     # via -r requirements.in
 ovito==3.6.0
@@ -323,7 +350,9 @@ pexpect==4.8.0
 pickleshare==0.7.5
     # via ipython
 pillow==9.3.0
-    # via matplotlib
+    # via
+    #   matplotlib
+    #   surfacetopography
 pluggy==1.0.0
     # via pytest
 prompt-toolkit==3.0.32
@@ -366,18 +395,22 @@ python-dateutil==2.8.2
     #   jupyter-client
     #   matplotlib
     #   pandas
+    #   surfacetopography
 pytz==2022.6
     # via pandas
 pyyaml==6.0
     # via
     #   -r requirements.in
     #   dtool-lookup-api
+    #   surfacetopography
 pyzmq==24.0.1
     # via
     #   ipykernel
     #   jupyter-client
 requests==2.28.1
-    # via dtool-http
+    # via
+    #   dtool-http
+    #   surfacetopography
 ruamel-yaml==0.17.21
     # via
     #   dtool-create
@@ -413,6 +446,8 @@ six==1.16.0
     #   python-dateutil
 stack-data==0.6.0
     # via ipython
+surfacetopography==1.1
+    # via contactmechanics
 tabulate==0.9.0
     # via fireworks
 threadpoolctl==3.1.0
