--- a/docker/jupyterlab/jupyterlab-SurfaceTopography/requirements.txt
+++ b/docker/jupyterlab/jupyterlab-SurfaceTopography/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.in
 #
+adhesion==0.90.0
+    # via -r requirements.in
 aiohttp==3.8.3
     # via dtool-lookup-api
 aiosignal==1.3.1
@@ -62,7 +64,9 @@ click==8.1.3
 click-plugins==1.1.1
     # via dtool-cli
 contactmechanics==1.0.0
-    # via -r requirements.in
+    # via
+    #   -r requirements.in
+    #   adhesion
 contourpy==1.0.6
     # via matplotlib
 cryptography==38.0.3
@@ -220,7 +224,7 @@ joblib==1.2.0
     #   scikit-learn
 jupyter-client==7.4.4
     # via ipykernel
-jupyter-core==4.11.2
+jupyter-core==5.0.0
     # via jupyter-client
 jupyterlab-widgets==3.0.3
     # via
@@ -260,6 +264,7 @@ msgpack==1.0.4
     # via mmtf-python
 mufft==0.23.1
     # via
+    #   adhesion
     #   contactmechanics
     #   surfacetopography
 multidict==6.0.2
@@ -278,11 +283,13 @@ numkit==1.2.2
     # via gromacswrapper
 numpi==0.3.1
     # via
+    #   adhesion
     #   contactmechanics
     #   surfacetopography
 numpy==1.23.4
     # via
     #   -r requirements.in
+    #   adhesion
     #   ase
     #   biopython
     #   contactmechanics
@@ -351,6 +358,8 @@ pillow==9.3.0
     # via
     #   matplotlib
     #   surfacetopography
+platformdirs==2.5.3
+    # via jupyter-core
 pluggy==1.0.0
     # via pytest
 prompt-toolkit==3.0.32
@@ -445,7 +454,9 @@ six==1.16.0
 stack-data==0.6.0
     # via ipython
 surfacetopography==1.1
-    # via contactmechanics
+    # via
+    #   adhesion
+    #   contactmechanics
 tabulate==0.9.0
     # via fireworks
 threadpoolctl==3.1.0
